# -uamp

./: .gitignore  CMakeLists.txt  README.md  databaseUamp  uamp
app/: CMakeLists.txt  main.cpp
app/src/: CMakeLists.txt  Controls.cpp  Controls.h  Player.cpp  Player.h  mainwindow.cpp  mainwindow.h  mainwindow.h.autosave  mainwindow.ui  mainwindow.ui.autosave  playlists.cpp  playlists.h  playlists.ui  recentlyused.cpp  recentlyused.h  recentlyused.ui
